trunk/Archive2/d6/1ed29e4ebbddf8/output
main.cpp:14:16: warning: reference to stack memory associated with local variable 'fx' returned [-Wreturn-stack-address]
        return fx;
               ^~
main.cpp:23:5: error: use of undeclared identifier 'cout'
    cout << x1 << endl;
    ^
main.cpp:23:19: error: use of undeclared identifier 'endl'
    cout << x1 << endl;
                  ^
main.cpp:24:5: error: use of undeclared identifier 'cout'
    cout << x2 << endl;
    ^
main.cpp:24:19: error: use of undeclared identifier 'endl'
    cout << x2 << endl;
                  ^
main.cpp:25:5: error: use of undeclared identifier 'cin'
    cin.get();
    ^
1 warning and 5 errors generated.
